--- a/style.css
+++ b/style.css
@@ -1,3 +1,23 @@
+.container {
+    height:fit-content;
+    max-width: 960px;
+    margin: 0 auto;
+    padding: 5px;
+    clear: both;
+    background-color: rosybrown;
+  }
+
+  #main-container {
+    padding-top: 130px;
+    min-height: calc(100vh - 70px);
+  }
+
 .navbar {
     margin-bottom: 3em;
 }
+
+img {
+    width:100%;
+    /* height: 100%; */
+}
+
